--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="col-md-5 offset-md-1">
                   <div class="detail-box">
                     <h1>
-                      Break into Engineering, <br>
+                      Break into TESTING, <br>
                       Ace Your Interview, <br>
                       In One Easy Source
                     </h1>
