--- a/index.html
+++ b/index.html
@@ -85,21 +85,25 @@
                 <div class="col-md-5 offset-md-1">
                   <div class="detail-box">
                     <h1>
-                      Break into TESTING, <br>
-                      Ace Your Interview, <br>
-                      In One Easy Source
+                      Technical Engineering Interview Preparation, <br>
+                      All In One Easy Source, <br>
                     </h1>
-                    <p>
-                      Practice for any engineering interview, from basics to advanced concepts
-                    </p>
-                    <!-- <div class="btn-box">
-                      <a href="" class="btn-1">
-                        About Us
+                    <ul>
+                      <li>Study for your toughest engineering interviews</li>
+                      <li>Brush up on engineering concepts commonly asked in interviews</li>
+                      <li>Practice  sample interview questions created and verified by interviewers working in the largest tech companies (Apple, Google, SpaceX, NVIDIA, etc.)</li>
+                      <li>Land your dream job!</li>
+                    </ul>
+                    <!-- <p>Study for some of the toughest engineering interviews, <br> with educational meterial and sample interview questions created and verified by engineers working at the biggest tech companies </p> -->
+                    <b>We are working very hard on this platform. Users that leave their email address below will get 50% off a monthly subscription when our service goes live.</b>
+                    <div class="btn-box">
+                      <a href="https://forms.gle/8aHq2fjXJQZP2PDN8" target="_blank" class="btn-1">
+                        <b>LEAVE YOUR EMAIL HERE</b>
                       </a>
-                      <a href="" class="btn-2">
+                      <!-- <a href="" class="btn-2">
                         Get Started Today
-                      </a>
-                    </div> -->
+                      </a> -->
+                    </div>
                   </div>
                 </div>
                 <div class="offset-md-1 col-md-4 img-container">
@@ -107,10 +111,15 @@
                     <img src="images/slider-img.png" alt="">
                   </div>
                 </div>
+                <div class="col-md-5 offset-md-1">
+                  <div class="detail-box">
+                    <b>Please feel free to browse our website to continue to learn about our service!</b>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-          <div class="carousel-item ">
+          <!-- <div class="carousel-item ">
             <div class="container-fluid">
               <div class="row">
                 <div class="col-md-5 offset-md-1">
@@ -124,12 +133,12 @@
                       State of the Art AI Interview Coach with real time feedback, just like speaking to an actual person
                     </p>
                     <div class="btn-box">
-                      <!-- <a href="" class="btn-1">
+                      <a href="" class="btn-1">
                         About Us
                       </a>
                       <a href="" class="btn-2">
                         Get Started Today
-                      </a> -->
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -140,8 +149,8 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="carousel-item ">
+          </div> -->
+          <!-- <div class="carousel-item ">
             <div class="container-fluid">
               <div class="row">
                 <div class="col-md-5 offset-md-1">
@@ -154,12 +163,12 @@
                       Prepare for difficult technical interview concepts by learning the basics and applying them in interactive, design based questions
                     </p>
                     <div class="btn-box">
-                      <!-- <a href="" class="btn-1">
+                      <a href="" class="btn-1">
                         About Us
                       </a>
                       <a href="" class="btn-2">
                         Get Started Today
-                      </a> -->
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -170,7 +179,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
 
       </div>
@@ -198,8 +207,11 @@
               </h2>
             </div>
             <p>
-              It is a long established fact that engineering interview prep is some of the toughest, most tedious type of interview prep out there. From visiting online tutorials, videos, and reading textbooks, consolidated engineering interview prep is now here.
+              It's a fact that engineering interview prep is some of the toughest, most tedious type of interview prep out there. From visiting online tutorials, videos, and reading textbooks, <b>consolidated engineering interview prep is now here.</b>
             </p>
+            <p>We strive to help engineers of a wide variety of fields leand their dream jobs. From electrical, mechanical, civil engineering, and more, <b>InterviewAware is the singular resource for all types of engineering interview prep, with verified educational material and sample interview questions created by professional engineers.</b></p>
+
+            <p>We bring some of the brightest and sharpest minds in engineering to help you get the dream job! We have contracted engineers working at some of the top engineering firms <b> - Apple, Google, SpaceX, NVIDIA, etc. - </b> to create sample interview questions and educational content, to attract the brighest minds to their companies. </p>
             <!-- <div class="btn-box">
               <a href="" class="btn-1">
                 Read More
@@ -223,7 +235,7 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          Engineering Verticals
+          Engineering Fields (Coming Soon)
         </h2>
       </div>
       <div class="category_container">
@@ -307,10 +319,10 @@
       </div>
       <div class="detail-box">
         <h2>
-          About Interview.Aware
+          About InterviewAware
         </h2>
         <p>
-          Welcome to Interview.Aware, the world's first engineering interview prep service. We understand that interviewing is a difficult and messy ordeal, going from source to source, looking up endless online videos, tutorials, and message boards with suspect interview insights. Our focus is on bringing a high level of transparency to the engineering interview process, by practicing technical engineering skills, testing design fundamentals, and refreshing even the brightest of engineers on obscure topics that were not covered since college.
+          Welcome to InterviewAware, the world's first engineering interview prep service. We understand that interviewing is a difficult and messy ordeal, going from source to source, looking up endless online videos, tutorials, and message boards with suspect interview insights. Our focus is on bringing a high level of transparency to the engineering interview process, by practicing technical engineering skills, testing design fundamentals, and refreshing even the brightest of engineers on obscure topics that were not covered since college. <br>
         </p>
         <!-- <a href="">
           Read More
