--- a/concepts/ohms_law.html
+++ b/concepts/ohms_law.html
@@ -12,7 +12,8 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Interview.Aware</title>
+  <title>InterviewAware</title>
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="../css/bootstrap.css" />
@@ -32,7 +33,7 @@
         <a class="logo-image" href="#">
             <img src="../images/samplelogo.png" alt="" />
         </a>
-        <a href="../index.html" class = "company-name">Interview.Aware</a>
+        <a href="../index.html" class = "company-name">InterviewAware</a>
         <div class="header-right">
           <div class="btn-drop">
             <button> Concepts</button>
