--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
+  
   <title>InterviewAware</title>
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
