--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <b>We are working very hard on this platform. Users that leave their email address below will get 50% off a monthly subscription when our service goes live.</b>
                     <div class="btn-box">
                       <a href="https://forms.gle/8aHq2fjXJQZP2PDN8" target="_blank" class="btn-1">
-                        <b>LEAVE YOUR EMAIL HERE</b>
+                        <b>CLICK HERE TO LEAVE YOUR EMAIL FOR 50% OFF </b>
                       </a>
                       <!-- <a href="" class="btn-2">
                         Get Started Today
@@ -114,7 +114,7 @@
                   </div>
                 </div>
                 <div class="col-md-5 offset-md-1">
-                  <div class="detail-box">
+                  <div class="detail-box" style="margin-top: 10px;">
                     <b>Please feel free to browse our website to continue to learn about our service!</b>
                   </div>
                 </div>
