--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   <div class="detail-box">
                     <h1>
                       Technical Engineering Interview Preparation, <br>
-                      All In One Easy Source, <br>
+                      In One, Easy Source <br>
                     </h1>
                     <ul>
                       <li>Study for your toughest engineering interviews</li>
