--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="carousel-item active">
             <div class="container-fluid">
               <div class="row">
-                <div class="col-md-5 offset-md-1">
+                <div class="col-md-5 offset-md-1" style="background-color: whitesmoke;">
                   <div class="detail-box">
                     <h1>
                       Technical Engineering Interview Preparation, <br>
@@ -109,13 +109,8 @@
                   </div>
                 </div>
                 <div class="offset-md-1 col-md-4 img-container">
-                  <div class="img-box">
+                  <div class="img-box" style="background-color: #F5EFE1;">
                     <img src="images/slider-img.png" alt="">
-                  </div>
-                </div>
-                <div class="col-md-5 offset-md-1">
-                  <div class="detail-box" style="margin-top: 10px;">
-                    <b>Please feel free to browse our website to continue to learn about our service!</b>
                   </div>
                 </div>
               </div>
