--- a/concept.html
+++ b/concept.html
@@ -105,7 +105,7 @@
           Circuit Theory
           </h4>
           <p>
-            Understanding circuit theory is vital as it forms the foundation for analyzing, designing, and troubleshooting electrical and electronic systems, serving as the backbone of modern technology. Proficiency in circuit theory will allow for mastery of one of the most common types of electrical engineering interview questions.
+            Circuit theory is critical component of the interview preparation process, since it forms the basis of a majority of electronic devices. Interview questions around analyzing, designing, and troubleshooting electronic systems are extremely common and serve as some of the more difficult types of interview questions. However, proficiency in concepts surrounding circuit theory will create the confidence to tackle even the toughest of problems.
           </p>
           <div class="answer-entry-bullets">
             <ul class="answer-bullets">
@@ -122,7 +122,7 @@
           Power Electronics
           </h4>
           <p>
-            Learning power electronics is crucial as it underpins the design and control of energy-efficient systems, ranging from nanoscale devices to electric vehicles, shaping the future of sustainable technology and global energy management. Mastery of power electronics enables engineers to develop innovative solutions for optimizing power transmission, conversion, and utilization, driving progress towards more efficiant power use in a multitude of applications.
+            Power systems and the respective design is a crucial component of the interview process - as a main challenge to designing efficient electronic systems. Questions around power systems are very common, as power restrictions are very common in all types of engineering applications. Specialization around specific roles in power electronics have emerged, each for their different application and skills. Here, we will discuss some of the critical components of electrical engineering power architecture and understand how to optimize optimizing power transmission, conversion, and utilization for all types of electrical devices. 
           </p>
           <div class="answer-entry-bullets">
             <ul class="answer-bullets">
