--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   <div class="detail-box">
                     <h1>
                       Technical Engineering Interview Preparation, <br>
-                      In One, Easy Source <br>
+                      In One, Easy Source - <span style="color:red;">50% off Sale</span>
                     </h1>
                     <ul>
                       <li>Study for your toughest engineering interviews</li>
@@ -100,7 +100,7 @@
                     <b>We are working very hard on this platform. Users that leave their email address below will get 50% off a monthly subscription when our service goes live.</b>
                     <div class="btn-box">
                       <a href="https://forms.gle/8aHq2fjXJQZP2PDN8" target="_blank" class="btn-1">
-                        <b>CLICK HERE TO LEAVE YOUR EMAIL FOR 50% OFF </b>
+                        <b>CLICK HERE TO SIGN UP FOR 50% OFF </b>
                       </a>
                       <!-- <a href="" class="btn-2">
                         Get Started Today
