--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   <div class="detail-box">
                     <h1>
                       Technical Engineering Interview Preparation, <br>
-                      In One, Easy Source - <span style="color:red;">50% off Sale</span>
+                      In One, Easy Source - <span style="color:red;">FREE Today!</span>
                     </h1>
                     <ul>
                       <li>Study for your toughest engineering interviews</li>
@@ -97,10 +97,10 @@
                       <li>Land your dream job!</li>
                     </ul>
                     <!-- <p>Study for some of the toughest engineering interviews, <br> with educational meterial and sample interview questions created and verified by engineers working at the biggest tech companies </p> -->
-                    <b>We are working very hard on this platform. Users that leave their email address below will get 50% off a monthly subscription when our service goes live.</b>
+                    <b>We are working very hard on this platform. Users that leave their email address below will get A FREE monthly subscription when our service goes live.</b>
                     <div class="btn-box">
                       <a href="https://forms.gle/8aHq2fjXJQZP2PDN8" target="_blank" class="btn-1">
-                        <b>CLICK HERE TO SIGN UP FOR 50% OFF </b>
+                        <b>CLICK HERE TO SIGN UP FOR A FREE SUBSCRIPTION</b>
                       </a>
                       <!-- <a href="" class="btn-2">
                         Get Started Today
