--- a/questions/question4.html
+++ b/questions/question4.html
@@ -36,6 +36,16 @@
         <a href="../index.html" class = "company-name">InterviewAware</a>
         <div class="header-right">
           <div class="btn-drop">
+            <form>
+              <button formaction="https://forms.gle/8aHq2fjXJQZP2PDN8">Sign Up</button>
+            </form>
+          </div>
+          <div class="btn-drop">
+            <form>
+              <button formaction="about.html">About Us</button>
+            </form>
+          </div>
+          <div class="btn-drop">
             <button> Concepts</button>
             <div class="dropdown-content">
               <a href="../concept.html">Electrical Engineering</a>
@@ -90,7 +100,7 @@
             <p>
             What is the purpose of decoupling capacitors in electronic circuits, and how do they function?
             </p>
-            <ul class="answer-bullets">
+            <ul class="answer-entry-bullets">
               <li><input placeholder=" Enter your answer here..."></input></li>
               <li><input placeholder=" Enter your answer here..."></input></li> 
               <li><input placeholder=" Enter your answer here..."></input></li>  
