--- a/concept.html
+++ b/concept.html
@@ -36,6 +36,16 @@
         <a href="index.html" class = "company-name">InterviewAware</a>
         <div class="header-right">
           <div class="btn-drop">
+            <form>
+              <button formaction="https://forms.gle/8aHq2fjXJQZP2PDN8">Sign Up</button>
+            </form>
+          </div>
+          <div class="btn-drop">
+            <form>
+              <button formaction="about.html">About Us</button>
+            </form>
+          </div>
+          <div class="btn-drop">
             <button> Concepts</button>
             <div class="dropdown-content">
               <a href="concept.html">Electrical Engineering</a>
