--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
         <a href="index.html" class = "company-name">InterviewAware</a>
         <div class="header-right">
           <div class="btn-drop">
+            <form>
+              <button formaction="https://forms.gle/8aHq2fjXJQZP2PDN8">Sign Up</button>
+            </form>
+          </div>
+          <div class="btn-drop">
+            <form>
+              <button formaction="about.html">About Us</button>
+            </form>
+          </div>
+          <div class="btn-drop">
             <button> Concepts</button>
             <div class="dropdown-content">
               <a href="concept.html">Electrical Engineering</a>
@@ -93,6 +103,7 @@
                     <ul>
                       <li>Study for your toughest engineering interviews</li>
                       <li>Brush up on engineering concepts commonly asked in interviews</li>
+                      <li>Electrical, Mechanical, Civil, Chemical Engineering, with other disciplines coming soon!</li>
                       <li>Practice  sample interview questions created and verified by interviewers working in the largest tech companies (Apple, Google, SpaceX, NVIDIA, etc.)</li>
                       <li>Land your dream job!</li>
                     </ul>
@@ -200,13 +211,13 @@
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                Engineeering Interview Prep, done right
+                Why does Engineering Interview Prep Resources not Exist?
               </h2>
             </div>
             <p>
-              It's a fact that engineering interview prep is some of the toughest, most tedious type of interview prep out there. From visiting online tutorials, videos, and reading textbooks, <b>consolidated engineering interview prep is now here.</b>
+              It's a fact that engineering interview prep is some of the toughest, most tedious type of interview prep out there. From visiting online tutorials, videos, and reading textbooks, <b style="color :red;">- consolidated engineering interview prep is now here.</b>
             </p>
-            <p>We strive to help engineers of a wide variety of fields leand their dream jobs. From electrical, mechanical, civil engineering, and more, <b>InterviewAware is the singular resource for all types of engineering interview prep, with verified educational material and sample interview questions created by professional engineers.</b></p>
+            <p>We strive to help engineers of a wide variety of fields land their dream jobs. From electrical, mechanical, civil engineering, and more, <b>InterviewAware is the singular resource for all types of engineering interview prep, with verified educational material and sample interview questions created by professional engineers.</b></p>
 
             <p>We bring some of the brightest and sharpest minds in engineering to help you get the dream job! We have contracted engineers working at some of the top engineering firms <b> - Apple, Google, SpaceX, NVIDIA, etc. - </b> to create sample interview questions and educational content, to attract the brighest minds to their companies. </p>
             <!-- <div class="btn-box">
@@ -225,6 +236,7 @@
   </section>
 
   <!-- end experience section -->
+  
 
   <!-- category section -->
 
@@ -252,7 +264,7 @@
           </div>
           <div class="detail-box">
             <h5>
-              Data Engineering
+              Civil Engineering
             </h5>
           </div>
         </div>
@@ -300,12 +312,35 @@
     </div>
   </section>
 
+  <section class="table_section layout_padding2-top">
+    <div class="flexx">
+      <div class="box1 layout_padding2-top">
+        <div class="img-box">
+          <img class="headshot" src="images/headshot.jpg" width= '80%' height='80%'>
+        </div>
+      </div>
+
+      <div class="box2 ">
+        <h3>
+          About Me
+        </h3>
+        <p style="font-weight: bold;">Founder: Chinmay Kulkarni: <a href="https://www.linkedin.com/in/chinmaykulkarni9/">LinkedIn</a></p>
+        <p>
+        Chinmay Kulkarni, current fulltime MBA student at Emory University - Goizueta Business School, has nearly 4 years of industry experience as a hardware engineer, working for a startup innovating on indoor location tracking technology, and at Qualcomm in Silicon Valley, working on integrating key electronic components for the iPhone15.<br><br>
+
+        Before starting full time employment, Chinmay received his education in electrical engineering from Georgia Tech in Atlanta. During his time there, he noticed that several of his fellow engineering classmates had issues with technical engineering interviews, with difficult questions requiring a greater amount of subject matter knowledge that often may not be covered in class or would be forgotten as a result of the rigor of classwork. Yet, this challenge was greatly reduced for fellow computer science students, who had access to greater resources to test and hone their coding interview skills. Therefore, the idea for InterviewAware was born – to bring a similar service to engineering classmates.<br><br>
+
+        While the MBA program is a time-consuming challenge, Chinmay plans to fully build out this MVP product that will have mass appeal to engineering job seekers. With the vision of partnering with engineering experts working at some of the most coveted firms, content will be created and shared to create highly reputable sources of engineering interview preparation. 
+        </p>
+      </div>
+    </div>
+  </section>
 
   <!-- end category section -->
 
   <!-- about section -->
 
-  <section class="about_section layout_padding">
+  <!-- <section class="about_section layout_padding">
     <div class="container">
       <div class="row">
         <div class="col-md-10 col-lg-9 mx-auto">
@@ -321,12 +356,12 @@
         <p>
           Welcome to InterviewAware, the world's first engineering interview prep service. We understand that interviewing is a difficult and messy ordeal, going from source to source, looking up endless online videos, tutorials, and message boards with suspect interview insights. Our focus is on bringing a high level of transparency to the engineering interview process, by practicing technical engineering skills, testing design fundamentals, and refreshing even the brightest of engineers on obscure topics that were not covered since college. <br>
         </p>
-        <!-- <a href="">
+        <a href="">
           Read More
-        </a> -->
+        </a>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- end about section -->
 
