--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
       <h3>
         About Me
       </h3>
-      <p style="font-weight: bold;">Founder: Chinmay Kulkarni: <a href="https://www.linkedin.com/in/chinmaykulkarni9/">LinkedIn</a></p>
+      <p style="font-weight: bold;">Founder: Chinmay Kulkarni: <a href="https://www.linkedin.com/in/chinmaykulkarni9/" target="_blank">LinkedIn</a></p>
       <p>
       Chinmay Kulkarni, current fulltime MBA student at Emory University - Goizueta Business School, has nearly 4 years of industry experience as a hardware engineer, working for a startup innovating on indoor location tracking technology, and at Qualcomm in Silicon Valley, working on integrating key electronic components for the iPhone15.<br><br>
 
