--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                Why does Engineering Interview Prep Resources not Exist?
+                Why do Engineering Interview Prep Resources not Exist?
               </h2>
             </div>
             <p>
