--- a/concept.html
+++ b/concept.html
@@ -12,6 +12,10 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
+  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16520256814"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-16520256814'); </script>
+
+  <!-- Event snippet for Page view conversion page --> <script> gtag('event', 'conversion', {'send_to': 'AW-16520256814/UctgCKbnraQZEK66vMU9'}); </script>
+
   <title>InterviewAware</title>
   <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
