--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
+  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16520256814"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-16520256814'); </script>
+
   
   <title>InterviewAware</title>
   <link rel="icon" type="image/x-icon" href="images/favicon.ico">
