--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
                     <ul>
                       <li>Study for your toughest engineering interviews</li>
                       <li>Brush up on engineering concepts commonly asked in interviews</li>
-                      <li>Electrical, Mechanical, Civil, Chemical Engineering, with other disciplines coming soon!</li>
                       <li>Practice  sample interview questions created and verified by interviewers working in the largest tech companies (Apple, Google, SpaceX, NVIDIA, etc.)</li>
                       <li>Land your dream job!</li>
                     </ul>
@@ -113,7 +112,7 @@
                     <b>We are working very hard on this platform. Users that leave their email address below will get A FREE monthly subscription when our service goes live.</b>
                     <div class="btn-box">
                       <a href="https://forms.gle/8aHq2fjXJQZP2PDN8" target="_blank" class="btn-1">
-                        <b>CLICK HERE TO SIGN UP FOR A FREE SUBSCRIPTION</b>
+                        <b>SIGN UP FOR A FREE SUBSCRIPTION NOW</b>
                       </a>
                       <!-- <a href="" class="btn-2">
                         Get Started Today
@@ -198,49 +197,29 @@
     <!-- end slider section -->
   </div>
 
-
-  <!-- experience section -->
-
-  <section class="experience_section layout_padding">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-5">
-          <div class="img-box">
-            <img src="images/experience-img.jpg" alt="">
-          </div>
+  <section class="table_section layout_padding2-top">
+    <div class="flexx">
+      <div class="box1 layout_padding2-top">
+        <div class="img-box">
+          <img class="headshot" src="images/headshot.jpg" width= '80%' height='80%'>
         </div>
-        <div class="col-md-7">
-          <div class="detail-box">
-            <div class="heading_container">
-              <h2>
-                Why do Engineering Interview Prep Resources not Exist?
-              </h2>
-            </div>
-            <p>
-              It's a fact that engineering interview prep is some of the toughest, most tedious type of interview prep out there. From visiting online tutorials, videos, and reading textbooks, <b style="color :red;">- consolidated engineering interview prep is now here.</b>
-            </p>
-            <p>We strive to help engineers of a wide variety of fields land their dream jobs. From electrical, mechanical, civil engineering, and more, <b>InterviewAware is the singular resource for all types of engineering interview prep, with verified educational material and sample interview questions created by professional engineers.</b></p>
+      </div>
 
-            <p>We bring some of the brightest and sharpest minds in engineering to help you get the dream job! We have contracted engineers working at some of the top engineering firms <b> - Apple, Google, SpaceX, NVIDIA, etc. - </b> to create sample interview questions and educational content, to attract the brighest minds to their companies. </p>
-            <!-- <div class="btn-box">
-              <a href="" class="btn-1">
-                Read More
-              </a>
-              <a href="" class="btn-2">
-                Get Started Today
-              </a>
-            </div> -->
-          </div>
-        </div>
+      <div class="box2 ">
+        <h3>
+          About Me
+        </h3>
+        <p style="font-weight: bold;">Founder: Chinmay Kulkarni: <a href="https://www.linkedin.com/in/chinmaykulkarni9/" target="_blank">LinkedIn</a></p>
+        <p>
+        Chinmay Kulkarni, current fulltime MBA student at Emory University - Goizueta Business School, has nearly 4 years of industry experience as a hardware engineer, working for a startup innovating on indoor location tracking technology, and at Qualcomm in Silicon Valley, working on integrating key electronic components for the iPhone15.<br><br>
 
+        Before starting full time employment, Chinmay received his education in electrical engineering from Georgia Tech in Atlanta. During his time there, he noticed that several of his fellow engineering classmates had issues with technical engineering interviews, with difficult questions requiring a greater amount of subject matter knowledge that often may not be covered in class or would be forgotten as a result of the rigor of classwork. Yet, this challenge was greatly reduced for fellow computer science students, who had access to greater resources to test and hone their coding interview skills. Therefore, the idea for InterviewAware was born – to bring a similar service to engineering classmates.<br><br>
+
+        While the MBA program is a time-consuming challenge, Chinmay plans to fully build out this MVP product that will have mass appeal to engineering job seekers. With the vision of partnering with engineering experts working at some of the most coveted firms, content will be created and shared to create highly reputable sources of engineering interview preparation. 
+        </p>
       </div>
     </div>
   </section>
-
-  <!-- end experience section -->
-  
-
-  <!-- category section -->
 
   <section class="category_section layout_padding">
     <div class="container">
@@ -314,29 +293,56 @@
     </div>
   </section>
 
-  <section class="table_section layout_padding2-top">
-    <div class="flexx">
-      <div class="box1 layout_padding2-top">
-        <div class="img-box">
-          <img class="headshot" src="images/headshot.jpg" width= '80%' height='80%'>
+
+
+
+
+  <!-- experience section -->
+
+  <section class="experience_section layout_padding">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-5">
+          <div class="img-box">
+            <img src="images/experience-img.jpg" alt="">
+          </div>
         </div>
-      </div>
+        <div class="col-md-7">
+          <div class="detail-box">
+            <div class="heading_container">
+              <h2>
+                Why do Engineering Interview Prep Resources not Exist?
+              </h2>
+            </div>
+            <p>
+              It's a fact that engineering interview prep is some of the toughest, most tedious type of interview prep out there. From visiting online tutorials, videos, and reading textbooks <b style="color :red;">- consolidated engineering interview prep is now here.</b>
+            </p>
+            <p>We strive to help engineers of a wide variety of fields land their dream jobs. From electrical, mechanical, civil engineering, and more, <b>InterviewAware is the singular resource for all types of engineering interview prep, with verified educational material and sample interview questions created by professional engineers.</b></p>
 
-      <div class="box2 ">
-        <h3>
-          About Me
-        </h3>
-        <p style="font-weight: bold;">Founder: Chinmay Kulkarni: <a href="https://www.linkedin.com/in/chinmaykulkarni9/" target="_blank">LinkedIn</a></p>
-        <p>
-        Chinmay Kulkarni, current fulltime MBA student at Emory University - Goizueta Business School, has nearly 4 years of industry experience as a hardware engineer, working for a startup innovating on indoor location tracking technology, and at Qualcomm in Silicon Valley, working on integrating key electronic components for the iPhone15.<br><br>
+            <p>We bring some of the brightest and sharpest minds in engineering to help you get the dream job! We have contracted engineers working at some of the top engineering firms <b> - Apple, Google, SpaceX, NVIDIA, etc. - </b> to create sample interview questions and educational content, to attract the brighest minds to their companies. </p>
+            <!-- <div class="btn-box">
+              <a href="" class="btn-1">
+                Read More
+              </a>
+              <a href="" class="btn-2">
+                Get Started Today
+              </a>
+            </div> -->
+          </div>
+        </div>
 
-        Before starting full time employment, Chinmay received his education in electrical engineering from Georgia Tech in Atlanta. During his time there, he noticed that several of his fellow engineering classmates had issues with technical engineering interviews, with difficult questions requiring a greater amount of subject matter knowledge that often may not be covered in class or would be forgotten as a result of the rigor of classwork. Yet, this challenge was greatly reduced for fellow computer science students, who had access to greater resources to test and hone their coding interview skills. Therefore, the idea for InterviewAware was born – to bring a similar service to engineering classmates.<br><br>
-
-        While the MBA program is a time-consuming challenge, Chinmay plans to fully build out this MVP product that will have mass appeal to engineering job seekers. With the vision of partnering with engineering experts working at some of the most coveted firms, content will be created and shared to create highly reputable sources of engineering interview preparation. 
-        </p>
       </div>
     </div>
   </section>
+
+  <!-- end experience section -->
+  
+
+  <!-- category section -->
+
+  
+
+  
 
   <!-- end category section -->
 
