--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@
                       In One, Easy Source - <span style="color:red;">FREE Today!</span>
                     </h1>
                     <ul>
+                      <li>Verified <b>interview questions and answers</b> created by interviewers working in the largest tech companies (Apple, Google, SpaceX, NVIDIA, etc.) </li>
                       <li>Study for your toughest engineering interviews</li>
                       <li>Brush up on engineering concepts commonly asked in interviews</li>
-                      <li>Practice  sample interview questions created and verified by interviewers working in the largest tech companies (Apple, Google, SpaceX, NVIDIA, etc.)</li>
+                      <!-- <li>Practice  sample interview questions created and verified by interviewers working in the largest tech companies (Apple, Google, SpaceX, NVIDIA, etc.)</li> -->
                       <li>Land your dream job!</li>
                     </ul>
                     <!-- <p>Study for some of the toughest engineering interviews, <br> with educational meterial and sample interview questions created and verified by engineers working at the biggest tech companies </p> -->
